src/components/TitleCard.module.css
.titleCard {
    margin: 8px;
    padding-bottom: 20px;
    padding-inline: 32px;
    border-radius: 12px;
    background-color: #2c3035;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 24px;
    width: 85%;
    height: fit-content;

    @media screen and (max-width: 1300px) {
        gap: 0;
    }

    @media screen and (max-width: 1100px) {
        width: calc(100% - var(--root-page-padding) * 2);
        padding-inline: 20px;
    }

    @media screen and (max-width: 750px) {
        flex-direction: column;
        align-items: center;
    }

    @media screen and (max-width: 450px) {
        padding: 10px 20px;
    }
}

.pageTitleContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-width: 550px;
    width: max-content;
    flex: 0 0 auto;
    gap: 5px;
    text-align: center;
    max-width: 100%;

    @media screen and (max-width: 1300px) {
        min-width: min-content;
    }

    @media screen and (max-width: 1100px) {
        flex-shrink: 1;
    }

    @media screen and (max-width: 750px) {
        flex-direction: row;
        gap: 20px;
        position: relative;

        &::after {
            content: "";
            flex-grow: 1;
            width: 100%;
            position: absolute;
            bottom: -10px;
            height: 3px;
            border-radius: 10px;
            background-color: var(--root-text-colour);
            opacity: 0.2;
        }
    }

    @media screen and (max-width: 600px) {
        width: 100%;
    }
}


.pageTitle {
    font-family: var(--montserrat-alternates-font-family);
    text-align: center;
    font-size: 64pt;
    font-weight: bold;
    display: inline-block;

    @media screen and (max-width: 1300px) {
        font-size: 58pt;
    }

    @media screen and (max-width: 750px) {
        font-size: 48pt;
    }

    @media screen and (max-width: 450px) {
        font-size: 32pt;
    }
}

.flavourText {
    font-family: var(--montserrat-alternates-font-family);
    text-align: center;
    font-weight: bold;
    font-size: 18pt;
    display: inline-block;

    @media screen and (max-width: 1300px) {
        font-size: 16pt;
    }

    @media screen and (max-width: 750px) {
        align-self: last baseline;
        margin-block: 16px;
        font-size: 14pt;
    }

    @media screen and (max-width: 600px) {
        display: none;
    }
}

.descriptionWrapper {
    text-align: left;
    align-content: center;
    height: 100%;
    flex: 1 1 auto;
    padding-top: 20px;
    margin-left: 25px;
    margin-right: -5px;

    @media screen and (max-width: 750px) {
        margin: 0;
    }
}

.description {
    font-family: var(--bellota-text-font-family);
    text-align: center;
    font-size: 14pt;
    font-weight: bold;
    opacity: 80%;
    white-space: pre-line;

    @media screen and (max-width: 450px) {
        font-size: 12pt;
    }
}

